--- a/week_04/homework/sheetz/style.css
+++ b/week_04/homework/sheetz/style.css
@@ -27,7 +27,7 @@ a  {
 }
 
 a:link  {
-	color: #000;
+	color: black;
 }
 
 a:visited  {
@@ -35,7 +35,7 @@ a:visited  {
 }
 
 a:hover  {
-	color: rgba(255,255,255,.8);
+	color: #03C03C;
 }
 
 h1 {
